Bug 156619 - A11Y sidebar: not clickable warning about content control in header/footer
Summary: A11Y sidebar: not clickable warning about content control in header/footer
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
7.6.0.0 alpha0+
Hardware: All All
: medium normal
Assignee: Balázs Varga
URL:
Whiteboard: target:24.2.0
Keywords:
Depends on:
Blocks: Accessibility-Check
  Show dependency treegraph
 
Reported: 2023-08-04 19:09 UTC by Gabor Kelemen (Collabora)
Modified: 2023-08-12 19:38 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Gabor Kelemen (Collabora) 2023-08-04 19:09:00 UTC
attachment 188740 [details] has a content control in the footer.
The accessibility sidebar gives a warning about this, but no hyperlink to highlight the issue.
Screenshot is attachment 188741 [details]

1. Open attached file
2. Open the Accessibility sidebar
3. Observe the warning "Avoid content controls in header or footer."
-> Should have a link highlighting the problematic content control 

Version: 24.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: eff5a3fe98ca5d1d28c4f5386c4af8a3be8f5703
CPU threads: 8; OS: Linux 5.4; UI render: default; VCL: gtk3
Locale: hu-HU (hu_HU.UTF-8); UI: en-US
Calc: threaded
Comment 1 Commit Notification 2023-08-10 09:09:16 UTC
Balazs Varga committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/8112e3dae2550acc43e064a69759ddbf7993142b

tdf#156619 - A11Y - fix not clickable warning about content control

It will be available in 24.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 2 BogdanB 2023-08-12 19:38:24 UTC
The link is going to the field from the footer.

Verified with
Version: 24.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 9d322bfa580839f48d2f4ce6cdd6b18c8253af85
CPU threads: 16; OS: Linux 6.2; UI render: default; VCL: gtk3
Locale: ro-RO (ro_RO.UTF-8); UI: en-US
Calc: threaded