tdf#156619 - A11Y - fix not clickable warning about content control

in header/footer. Goto content controls in header and footer.

Change-Id: I1e7eda0e9ab73a94d3f4963630901ff6701b521f
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/155535
Tested-by: Jenkins
Reviewed-by: Samuel Mehrbrodt <samuel.mehrbrodt@allotropia.de>